--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@ footer {
 
     <footer>
         <div class="container">
-            <p>&copy; 2026 DevFreela. Todos os direitos reservados.</p>
+            <p>&copy; 2026 Matheus Nascimento de Lemos. Todos os direitos reservados.</p>
         </div>
     </footer>
 
