--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@ footer {
                     Desenvolvedor Full Stack
                 </h1>
                 <p>
-                    Formado em Segurança da Informação, transformo ideias em soluções digitais seguras e funcionais. 
+                    Formado em Sistemas de Informação, transformo ideias em soluções digitais seguras e funcionais. 
                     Especializado em automação, chatbots e aplicações web modernas.
                 </p>
                 <div class="cta-buttons">
